Mudança de titulo
ps10 para help

--- a/brincadeiras/landing page/landing-page.html
+++ b/brincadeiras/landing page/landing-page.html
@@ -23,7 +23,7 @@
     <main class="main">
         <section class="conteudo-main">
             <div class="texto-main">
-                <h1 class="titulo">Ps10!</h1>
+                <h1 class="titulo">Help!</h1>
                 <h2 class="sub">Vamos Mudar o mundo!</h2>
                 <button class="botao">Junte-se</button>
             </div>
