--- a/exercicios/023/index.html
+++ b/exercicios/023/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="icon/favicon-32x32.png" type="image/x-icon">
-    <title></title>
+    <title>Imagens no fundo</title>
 </head>
 <body>
+    <div class="all">
+        <div class="quadrado" id="q1">
+        </div>
+        <div class="quadrado" id="q2">
+        </div>
+        <div class="quadrado" id="q3">
+        </div>
+    </div>
     
 </body>
 </html>
